# go/oapi-todo/main.go
@@ -1,13 +1,58 @@
 package main
 
 import (
+	"database/sql"
+	"fmt"
+	"log"
+	"os"
+
+	"github.com/go-sql-driver/mysql"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 
 	"github.com/dys-org/oapi-todo/api"
 )
 
+var db *sql.DB
+
+func initDB() {
+	cfg := mysql.Config{
+		User:   os.Getenv("DBUSER"),
+		Passwd: os.Getenv("DBPASS"),
+		Net:    "tcp",
+		Addr:   "127.0.0.1:3306",
+		DBName: "oapi_todo",
+	}
+
+	var err error
+	db, err = sql.Open("mysql", cfg.FormatDSN())
+	if err != nil {
+		log.Fatal(err)
+	}
+	if err = db.Ping(); err != nil {
+		log.Fatal(err)
+	}
+	fmt.Println("Connected!")
+	defer db.Close()
+
+	_, err = db.Exec(`CREATE TABLE IF NOT EXISTS todo (
+			id      INT AUTO_INCREMENT NOT NULL,
+			text    VARCHAR(255) NOT NULL,
+			done    BOOLEAN NOT NULL DEFAULT false,
+			PRIMARY KEY (id)
+	)`)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+}
+
 func main() {
+	initDB()
+
+	// Pass the db instance to the api package
+	api.SetDB(db)
+
 	// create a type that satisfies the `api.ServerInterface`, which contains an implementation of every operation from the generated code
 	server := api.NewServer()
 	e := echo.New()
@@ -15,7 +60,7 @@ func main() {
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
 
-	api.RegisterHandlers(e, server)
+	api.RegisterHandlersWithBaseURL(e, server, "/api")
 
 	// And we serve HTTP until the world ends.
 	e.Logger.Fatal(e.Start(":6969"))
