# js/packages/oapi-todo/src/api.ts
@@ -1,0 +1,348 @@
+/**
+ * Generated by orval v6.31.0 🍺
+ * Do not edit manually.
+ * Todo API
+ * OpenAPI spec version: 1.0.0
+ */
+import { useMutation, useQuery } from '@tanstack/vue-query';
+import type {
+  MutationFunction,
+  QueryFunction,
+  QueryKey,
+  UseMutationOptions,
+  UseMutationReturnType,
+  UseQueryOptions,
+  UseQueryReturnType,
+} from '@tanstack/vue-query';
+import * as axios from 'axios';
+import type { AxiosError, AxiosRequestConfig, AxiosResponse } from 'axios';
+import { computed, unref } from 'vue';
+import type { MaybeRef } from 'vue';
+
+import type { Todo } from './model';
+
+type AwaitedInput<T> = PromiseLike<T> | T;
+
+type Awaited<O> = O extends AwaitedInput<infer T> ? T : never;
+
+/**
+ * @summary List all todos
+ */
+export const getTodos = (options?: AxiosRequestConfig): Promise<AxiosResponse<Todo[]>> => {
+  return axios.default.get(`/api/todos`, options);
+};
+
+export const getGetTodosQueryKey = () => {
+  return ['api', 'todos'] as const;
+};
+
+export const getGetTodosQueryOptions = <
+  TData = Awaited<ReturnType<typeof getTodos>>,
+  TError = AxiosError<unknown>,
+>(options?: {
+  query?: Partial<UseQueryOptions<Awaited<ReturnType<typeof getTodos>>, TError, TData>>;
+  axios?: AxiosRequestConfig;
+}) => {
+  const { query: queryOptions, axios: axiosOptions } = options ?? {};
+
+  const queryKey = getGetTodosQueryKey();
+
+  const queryFn: QueryFunction<Awaited<ReturnType<typeof getTodos>>> = ({ signal }) =>
+    getTodos({ signal, ...axiosOptions });
+
+  return { queryKey, queryFn, ...queryOptions } as UseQueryOptions<
+    Awaited<ReturnType<typeof getTodos>>,
+    TError,
+    TData
+  >;
+};
+
+export type GetTodosQueryResult = NonNullable<Awaited<ReturnType<typeof getTodos>>>;
+export type GetTodosQueryError = AxiosError<unknown>;
+
+/**
+ * @summary List all todos
+ */
+export const useGetTodos = <
+  TData = Awaited<ReturnType<typeof getTodos>>,
+  TError = AxiosError<unknown>,
+>(options?: {
+  query?: Partial<UseQueryOptions<Awaited<ReturnType<typeof getTodos>>, TError, TData>>;
+  axios?: AxiosRequestConfig;
+}): UseQueryReturnType<TData, TError> & { queryKey: QueryKey } => {
+  const queryOptions = getGetTodosQueryOptions(options);
+
+  const query = useQuery(queryOptions) as UseQueryReturnType<TData, TError> & {
+    queryKey: QueryKey;
+  };
+
+  query.queryKey = unref(queryOptions).queryKey as QueryKey;
+
+  return query;
+};
+
+/**
+ * @summary Create a new todo
+ */
+export const postTodos = (
+  todo: MaybeRef<Todo>,
+  options?: AxiosRequestConfig,
+): Promise<AxiosResponse<Todo>> => {
+  todo = unref(todo);
+  return axios.default.post(`/api/todos`, todo, options);
+};
+
+export const getPostTodosMutationOptions = <
+  TError = AxiosError<unknown>,
+  TContext = unknown,
+>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof postTodos>>,
+    TError,
+    { data: Todo },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationOptions<Awaited<ReturnType<typeof postTodos>>, TError, { data: Todo }, TContext> => {
+  const { mutation: mutationOptions, axios: axiosOptions } = options ?? {};
+
+  const mutationFn: MutationFunction<Awaited<ReturnType<typeof postTodos>>, { data: Todo }> = (
+    props,
+  ) => {
+    const { data } = props ?? {};
+
+    return postTodos(data, axiosOptions);
+  };
+
+  return { mutationFn, ...mutationOptions };
+};
+
+export type PostTodosMutationResult = NonNullable<Awaited<ReturnType<typeof postTodos>>>;
+export type PostTodosMutationBody = Todo;
+export type PostTodosMutationError = AxiosError<unknown>;
+
+/**
+ * @summary Create a new todo
+ */
+export const usePostTodos = <TError = AxiosError<unknown>, TContext = unknown>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof postTodos>>,
+    TError,
+    { data: Todo },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationReturnType<
+  Awaited<ReturnType<typeof postTodos>>,
+  TError,
+  { data: Todo },
+  TContext
+> => {
+  const mutationOptions = getPostTodosMutationOptions(options);
+
+  return useMutation(mutationOptions);
+};
+
+/**
+ * @summary Get a todo by ID
+ */
+export const getTodosId = (
+  id: MaybeRef<number>,
+  options?: AxiosRequestConfig,
+): Promise<AxiosResponse<Todo>> => {
+  id = unref(id);
+  return axios.default.get(`/api/todos/${id}`, options);
+};
+
+export const getGetTodosIdQueryKey = (id: MaybeRef<number>) => {
+  return ['api', 'todos', id] as const;
+};
+
+export const getGetTodosIdQueryOptions = <
+  TData = Awaited<ReturnType<typeof getTodosId>>,
+  TError = AxiosError<unknown>,
+>(
+  id: MaybeRef<number>,
+  options?: {
+    query?: Partial<UseQueryOptions<Awaited<ReturnType<typeof getTodosId>>, TError, TData>>;
+    axios?: AxiosRequestConfig;
+  },
+) => {
+  const { query: queryOptions, axios: axiosOptions } = options ?? {};
+
+  const queryKey = getGetTodosIdQueryKey(id);
+
+  const queryFn: QueryFunction<Awaited<ReturnType<typeof getTodosId>>> = ({ signal }) =>
+    getTodosId(id, { signal, ...axiosOptions });
+
+  return {
+    queryKey,
+    queryFn,
+    enabled: computed(() => !!unref(id)),
+    ...queryOptions,
+  } as UseQueryOptions<Awaited<ReturnType<typeof getTodosId>>, TError, TData>;
+};
+
+export type GetTodosIdQueryResult = NonNullable<Awaited<ReturnType<typeof getTodosId>>>;
+export type GetTodosIdQueryError = AxiosError<unknown>;
+
+/**
+ * @summary Get a todo by ID
+ */
+export const useGetTodosId = <
+  TData = Awaited<ReturnType<typeof getTodosId>>,
+  TError = AxiosError<unknown>,
+>(
+  id: MaybeRef<number>,
+  options?: {
+    query?: Partial<UseQueryOptions<Awaited<ReturnType<typeof getTodosId>>, TError, TData>>;
+    axios?: AxiosRequestConfig;
+  },
+): UseQueryReturnType<TData, TError> & { queryKey: QueryKey } => {
+  const queryOptions = getGetTodosIdQueryOptions(id, options);
+
+  const query = useQuery(queryOptions) as UseQueryReturnType<TData, TError> & {
+    queryKey: QueryKey;
+  };
+
+  query.queryKey = unref(queryOptions).queryKey as QueryKey;
+
+  return query;
+};
+
+/**
+ * @summary Update a todo by ID
+ */
+export const putTodosId = (
+  id: MaybeRef<number>,
+  todo: MaybeRef<Todo>,
+  options?: AxiosRequestConfig,
+): Promise<AxiosResponse<Todo>> => {
+  id = unref(id);
+  todo = unref(todo);
+  return axios.default.put(`/api/todos/${id}`, todo, options);
+};
+
+export const getPutTodosIdMutationOptions = <
+  TError = AxiosError<unknown>,
+  TContext = unknown,
+>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof putTodosId>>,
+    TError,
+    { id: number; data: Todo },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationOptions<
+  Awaited<ReturnType<typeof putTodosId>>,
+  TError,
+  { id: number; data: Todo },
+  TContext
+> => {
+  const { mutation: mutationOptions, axios: axiosOptions } = options ?? {};
+
+  const mutationFn: MutationFunction<
+    Awaited<ReturnType<typeof putTodosId>>,
+    { id: number; data: Todo }
+  > = (props) => {
+    const { id, data } = props ?? {};
+
+    return putTodosId(id, data, axiosOptions);
+  };
+
+  return { mutationFn, ...mutationOptions };
+};
+
+export type PutTodosIdMutationResult = NonNullable<Awaited<ReturnType<typeof putTodosId>>>;
+export type PutTodosIdMutationBody = Todo;
+export type PutTodosIdMutationError = AxiosError<unknown>;
+
+/**
+ * @summary Update a todo by ID
+ */
+export const usePutTodosId = <TError = AxiosError<unknown>, TContext = unknown>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof putTodosId>>,
+    TError,
+    { id: number; data: Todo },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationReturnType<
+  Awaited<ReturnType<typeof putTodosId>>,
+  TError,
+  { id: number; data: Todo },
+  TContext
+> => {
+  const mutationOptions = getPutTodosIdMutationOptions(options);
+
+  return useMutation(mutationOptions);
+};
+
+/**
+ * @summary Delete a todo by ID
+ */
+export const deleteTodosId = (
+  id: MaybeRef<number>,
+  options?: AxiosRequestConfig,
+): Promise<AxiosResponse<void>> => {
+  id = unref(id);
+  return axios.default.delete(`/api/todos/${id}`, options);
+};
+
+export const getDeleteTodosIdMutationOptions = <
+  TError = AxiosError<unknown>,
+  TContext = unknown,
+>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof deleteTodosId>>,
+    TError,
+    { id: number },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationOptions<
+  Awaited<ReturnType<typeof deleteTodosId>>,
+  TError,
+  { id: number },
+  TContext
+> => {
+  const { mutation: mutationOptions, axios: axiosOptions } = options ?? {};
+
+  const mutationFn: MutationFunction<Awaited<ReturnType<typeof deleteTodosId>>, { id: number }> = (
+    props,
+  ) => {
+    const { id } = props ?? {};
+
+    return deleteTodosId(id, axiosOptions);
+  };
+
+  return { mutationFn, ...mutationOptions };
+};
+
+export type DeleteTodosIdMutationResult = NonNullable<Awaited<ReturnType<typeof deleteTodosId>>>;
+
+export type DeleteTodosIdMutationError = AxiosError<unknown>;
+
+/**
+ * @summary Delete a todo by ID
+ */
+export const useDeleteTodosId = <TError = AxiosError<unknown>, TContext = unknown>(options?: {
+  mutation?: UseMutationOptions<
+    Awaited<ReturnType<typeof deleteTodosId>>,
+    TError,
+    { id: number },
+    TContext
+  >;
+  axios?: AxiosRequestConfig;
+}): UseMutationReturnType<
+  Awaited<ReturnType<typeof deleteTodosId>>,
+  TError,
+  { id: number },
+  TContext
+> => {
+  const mutationOptions = getDeleteTodosIdMutationOptions(options);
+
+  return useMutation(mutationOptions);
+};
